Fix broken css

--- a/static_assets/styles/club/event.css
+++ b/static_assets/styles/club/event.css
@@ -140,8 +140,8 @@
   }
 
   img.emoji {
-    height: 1.1em;
-    width: 1..em;
+    height: 1.3em;
+    width: 1.3em;
     margin: 0 .05em 0 .1em;
     vertical-align: -0.2em;
   }
